fix Bugs in HFileInput